# SPAutoPost

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.admin  Dockerfile.core  README.md  config.example.yml  config.hosted.example.yml  config.local.example.yml  orca.yaml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: change.md  spec.md
.github/workflows/: ci.yml
admin-api/: tsconfig.json
admin-api/src/: auth.ts  http.ts  index.ts  main.ts  postgres.ts  server.ts  service.ts  types.ts
admin-api/test/: adminApi.test.ts  auth.test.ts
deploy/: Dockerfile.admin  Dockerfile.core  README.md  config.hosted.example.yml  hosted.env.example  jobs.example.yaml  log-analytics.queries.kql
docs/: design-documents.md  features.md  openspec-workflow.md  product-brief.md  project-rules.md  roadmap.md
docs/decisions/: 2026-06-22-admin-api-ui-in-m1.md  2026-06-22-admin-authentication-entra-id.md  2026-06-22-admin-core-boundary.md  2026-06-22-admin-ui-stack.md  2026-06-22-azure-hosted-core.md  2026-06-22-db-migration-strategy.md  2026-06-22-llm-provider-strategy.md  2026-06-22-log-analytics-in-m6.md  2026-06-22-m1-implementation-order.md  2026-06-22-mvp-runtime-and-language.md  2026-06-22-sharepoint-list-vs-site-page.md  2026-06-22-storage-strategy.md  README.md
docs/implementation/: m1-handoff.md
docs/runbooks/: graph-delegated-poc.md  incident-response.md  log-analytics.md  milestone-dynamic-workflow-worksheet.md  multi-agent-orchestration.md  operation.md  production-hardening.md  security-review.md
docs/specs/: README.md  admin-authentication.md  admin-ui-api.md  architecture.md  audit-log.md  configuration.md  data-model.md  deployment.md  draft-composition.md  error-handling.md  external-collector-boundary.md  graph-authentication.md  initial-system.md  llm-provider.md  m1-mvp-scope.md  normalization-and-triage.md  review-approval-workflow.md  security-baseline.md  sharepoint-publishing.md  source-collection.md
docs/spikes/: firecrawl-adapter-spike.md
openspec/grill/: 20260622-cross-cutting-m1-foundation.md
samples/: firecrawl_spike.py
samples/advisories/: manual-advisory.json  manual-cve.yaml
scripts/: aca-job-entrypoint.sh
src/spautopost/: __init__.py  __main__.py  advisory_input.py  cli.py  collection_checkpoint.py  config.py  dry_run.py  errors.py  external_collector_import.py  firecrawl_adapter.py  job_entrypoint.py  models.py  myjvn_adapter.py  nvd_adapter.py  retry.py  review_workflow.py  sample_source.py  scheduler.py  secrets.py  sharepoint_connector.py  sharepoint_publisher.py  source_adapters.py  triage.py
tests/: __init__.py  conftest.py  support.py  test_aca_job_entrypoint.py  test_advisory_input.py  test_cli.py  test_collection_checkpoint.py  test_command_queue.py  test_config.py  test_constraints.py  test_dry_run.py  test_external_collector_import.py  test_firecrawl_adapter.py  test_job_entrypoint.py  test_migrations.py  test_parity.py  test_retry.py  test_review_workflow.py  test_roundtrip.py  test_sample_source.py  test_scheduler.py  test_secrets.py  test_security.py  test_sharepoint_connector.py  test_sharepoint_publisher.py  test_source_adapters.py
tests/graph/: conftest.py  test_auth.py  test_publisher.py  test_sharepoint_client.py
tests/llm/: test_azure_openai.py  test_generic_provider.py  test_provider.py  (+1 more)
(+231 files in other folders)
